--- a/app/views/client/verifications/verification_documents/_fields.slim
+++ b/app/views/client/verifications/verification_documents/_fields.slim
@@ -1,9 +1,32 @@
-/ - raise
 - current_account.document_types.order('file_type DESC').each do |document_type|
-  = f.input document_type.field_name,
-          wrapper: :vertical_file,
-          as: :file,
-          input_html: { accept: document_type.content_types.join(',') },
-          label: document_type.title
-          / hint: t('.document_hint', from: number_to_human_size(Rails.configuration.application.min_upload_file_size), to: number_to_human_size(Rails.configuration.application.max_upload_file_size), amount: Rails.configuration.application.min_upload_files_amount).html_safe
+    - new_document = VerificationDocument.new document_type: document_type
+    = f.simple_fields_for(:verification_documents, new_document) do |builder|
+        .col-lg-12
+            = builder.input :file,
+                            wrapper: :vertical_file,
+                            as: :file,
+                            input_html: { accept: new_document.document_type.content_types.join(',') },
+                            label: new_document.document_type.title
 
+
+
+    / =builder.input
+    / h1 BUILDER
+
+    / = document.input new_object,
+    /         wrapper: :vertical_file,
+    /         as: :file
+/ = f.simple_fields_for :verification_documents do |document|
+/   = document.input new_object,
+/                     wrapper: :vertical_file,
+/                     as: :file
+/ /
+/ - current_account.document_types.order('file_type DESC').each do |document_type|=
+/   .col-lg-12
+/     = f.input document_type.field_name,
+/             wrapper: :vertical_file,
+/             as: :file,
+/             input_html: { accept: document_type.content_types.join(',') },
+/             label: document_type.title
+/             / hint: t('.document_hint', from: number_to_human_size(Rails.configuration.application.min_upload_file_size), to: number_to_human_size(Rails.configuration.application.max_upload_file_size), amount: Rails.configuration.application.min_upload_files_amount).html_safe
+/
