--- a/app/views/admin/review_result_labels/index.slim
+++ b/app/views/admin/review_result_labels/index.slim
@@ -7,15 +7,18 @@
       tr
         th ID
         th Тэг
+        th Tэг на русском
         th Публичный комментарий
         th Действия
+        th
 
     tbody
       - labels.each do |label|
         tr
           td = label.id
           td = label.label
-          td = label.public_comment
           td = label.label_ru
+          td = label.public_comment
+          td = link_to 'Редактировать', edit_admin_review_result_label_path(label)
       br
   = paginate labels
