Validate verifiaction_documents

--- a/app/views/client/verifications/_document_field.slim
+++ b/app/views/client/verifications/_document_field.slim
@@ -2,6 +2,8 @@
   = document.input :file,
                    wrapper: :vertical_file,
                    as: :file,
+                   value: :file_cache,
                    label: document.object.document_type.title,
-                   input_html: { accept: document.object.document_type.content_types.join(',') }
+                   input_html: { accept: document.object.document_type.content_types.join(','), title: '123'}
+  = document.input :file_cache, as: :hidden
   = document.input :document_type_id, as: :hidden
