--- a/app/views/client/verifications/_document_field.slim
+++ b/app/views/client/verifications/_document_field.slim
@@ -5,7 +5,7 @@
                    value: :file_cache,
                    label: document.object&.document_type&.title,
                    input_html: { accept: document.object&.document_type&.content_types&.join(',')},
-                   hint: t('.document_hint', from: number_to_human_size(Rails.configuration.application.min_upload_file_size), to: number_to_human_size(Rails.configuration.application.max_upload_file_size), amount: Rails.configuration.application.min_upload_files_amount).html_safe
+                   hint: document_file_hint
 
   = document.input :file_cache, as: :hidden
   = document.input :document_type_id, as: :hidden
