--- a/app/views/client/verifications/_document_field.slim
+++ b/app/views/client/verifications/_document_field.slim
@@ -3,8 +3,8 @@
                    wrapper: :vertical_file,
                    as: :file,
                    value: :file_cache,
-                   label: document.object&.document_type&.title,
-                   input_html: { accept: document.object&.document_type&.content_types&.join(',')},
+                   label: document.object.document_type.title,
+                   input_html: { accept: document.object.document_type.content_types.join(',')},
                    hint: document_file_hint
 
   = document.input :file_cache, as: :hidden
