--- a/app/views/admin/countries/index.slim
+++ b/app/views/admin/countries/index.slim
@@ -16,4 +16,4 @@ table.table.table-striped.table-hover
         td = country.title_ru
         td = country.title_en
         td
-          / = render 'archive_button', member: country
+          = render 'archive_button', country: country
