Add Sticky Header

--- a/app/views/admin/countries/index.slim
+++ b/app/views/admin/countries/index.slim
@@ -2,7 +2,7 @@ h2 Страны
 hr
 div.mb-2= t 'application.index.total_records', count: countries.count
 table.table.table-striped.table-hover
-  thead.thead-dark
+  thead.thead-dark.sticky-header
     tr
       th ISO-3166(alpha2)
       th Название(RU)
