--- a/app/views/admin/countries/index.slim
+++ b/app/views/admin/countries/index.slim
@@ -1,7 +1,7 @@
 h2 Страны
 hr
 div.mb-2= t 'application.index.total_records', count: countries.count
-table.table.table-striped.table-hover
+table.table.table-striped.table-hover.table-bordered
   thead.thead-dark.sticky-header
     tr
       th ISO-3166(alpha2)
@@ -16,6 +16,6 @@ table.table.table-striped.table-hover
         td = country.iso_code
         td = country.title_ru
         - Rails.configuration.application.id_types.each do |id_type|
-          td = country.id_types.include? id_type
+          td =render 'toggle_id_type', country: country, id_type: id_type
         td
           = render 'archive_button', country: country
