--- a/app/views/admin/countries/index.slim
+++ b/app/views/admin/countries/index.slim
@@ -1,6 +1,8 @@
 h2 Страны
 hr
-div.mb-2= t 'application.index.total_records', count: countries.count
+div
+  div.mb-2.pull-left = t 'application.index.total_records', count: countries.count
+  div.pull-right =link_to 'Новая страна', new_admin_country_path, class: 'btn btn-sm btn-secondary'
 table.table.table-striped.table-hover.table-bordered
   thead.thead-dark.sticky-header
     tr
