--- a/app/views/admin/countries/_toggle_id_type.slim
+++ b/app/views/admin/countries/_toggle_id_type.slim
@@ -1,5 +1,3 @@
--if country.id_types.include?(id_type)
-  = link_to '✅', '#', class: 'btn btn-sm', remote: :true
--else
-  = link_to '❌', '#', class: 'btn btn-sm', remote: :true
+= link_to toggle_emoji(country.id_types.include?(id_type)), toggle_id_type_admin_country_path(country, id_type: id_type), id: "country#{country.id}##{id_type}", class: 'btn btn-sm', remote: :true, method: :post
+
 
