--- a/app/views/admin/countries/index.slim
+++ b/app/views/admin/countries/index.slim
@@ -18,7 +18,8 @@ table.table.table-striped.table-hover.table-bordered
         td = country.iso_code
         td = country.title_ru
         - Rails.configuration.application.id_types.each do |id_type|
-          td =render 'toggle_id_type', country: country, id_type: id_type
+          td id="country#{country.id}-#{id_type}"
+            = render 'toggle_id_type', country: country, id_type: id_type
         td
           = render 'archive_button', country: country
           br
