--- a/app/views/admin/countries/index.slim
+++ b/app/views/admin/countries/index.slim
@@ -6,7 +6,7 @@ div
 table.table.table-striped.table-hover.table-bordered
   thead.thead-dark.sticky-header
     tr
-      th ISO-3166(alpha2)
+      th ISO-3166
       th Название(RU)
       - Rails.configuration.application.id_types.each do |id_type|
         th.bg-success =id_type
