--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -43,17 +43,10 @@
           = f.input :email, as: :email
       .row[data-applicant-comment]
         .col-12
-           = f.input :applicant_comment, as: :text, placeholder: t('.applicant_comment_placeholder')
+          = f.input :applicant_comment, as: :text, placeholder: t('.applicant_comment_placeholder')
       .row
-        .col-12.col-sm-6
-          = f.input :documents_cache, as: :hidden
-          = f.input :documents,
-                     wrapper: :vertical_file,
-                     as: :file,
-                     input_html: { multiple: true, accept: Rails.configuration.application.document_content_types.join(',') },
-                     label: "Документы",
-                     hint: t('.document_hint', from: number_to_human_size(Rails.configuration.application.min_upload_file_size), to: number_to_human_size(Rails.configuration.application.max_upload_file_size), amount: Rails.configuration.application.min_upload_files_amount).html_safe
-
+        = f.simple_fields_for :verification_documents do |document|
+          = render 'document_field', document: document
       .row
         .col-12
           .text-center
