--- a/app/views/admin/countries/update.js.erb
+++ b/app/views/admin/countries/update.js.erb
@@ -1,1 +1,1 @@
-$("#country<%= country.id %>-<%= id_type %>").html("<%= escape_javascript( render 'toggle_id_type', country: country, id_type: id_type ) %>");
+$("#country<%= country.id %>-<%= id_type %>").html("<%= escape_javascript( render 'document_status', country: country, id_type: id_type ) %>");
