--- a/app/views/admin/countries/_document_status.slim
+++ b/app/views/admin/countries/_document_status.slim
@@ -1,4 +1,4 @@
 / = link_to status_icon(country.available_documents.include?(id_type)), toggle_id_type_admin_country_path(country, id_type: id_type), class: 'btn btn-sm', remote: :true, method: :post
 = link_to status_icon(country.available_documents.include?(document)),
-          admin_country_path(country),
+          admin_country_path(country, country: {document: document},),
           method: :put, remote: true
