--- a/app/views/admin/verifications/_documents.slim
+++ b/app/views/admin/verifications/_documents.slim
@@ -1,11 +1,17 @@
 .row
   .col-md-12
-    - if verification.document_files.any?
-      - verification.document_files.each_with_index do |document, i|
+    - if verification.verification_documents.any?
+      - verification.verification_documents.each_with_index do |doc, i|
         .card.float-left.shadow-sm.mb-5.rounded style="width: #{VerificationDocumentUploader::THUMBNAIL_WIDTH}px"
-          -# = tag.video(tag.source(src: url), controls: 'controls')
-          = link_to '#', 'data-toggle': 'modal', 'data-target': "#document_modal_#{i}"
-            = image_tag document.thumb.url, style: "max-width: #{VerificationDocumentUploader::THUMBNAIL_WIDTH}px; max-height: #{VerificationDocumentUploader::THUMBNAIL_HEIGHT}px", class: 'card-img-top'
-        = render partial: 'document_modal', locals: {verification: verification, document: document, index: i}
+          .card-img-top
+            -# = tag.video(tag.source(src: url), controls: 'controls')
+            = link_to '#', 'data-toggle': 'modal', 'data-target': "#document_modal_#{i}"
+              = image_tag doc.file.thumb.url, style: "max-width: #{VerificationDocumentUploader::THUMBNAIL_WIDTH}px; max-height: #{VerificationDocumentUploader::THUMBNAIL_HEIGHT}px", class: 'card-img-top'
+          .card-body
+            - if doc.similar_documents.any?
+              p.card-text
+                = link_to t('.similars', count: doc.similar_documents.size),
+                        admin_verification_document_path(doc), target: '_blank'
+        = render partial: 'document_modal', locals: {verification: verification, document: doc, index: i}
     - else
       p= t 'no_documents_uploaded'
