--- a/app/views/admin/accounts/show.html.slim
+++ b/app/views/admin/accounts/show.html.slim
@@ -13,6 +13,7 @@
             = f.input :verification_callback_url
             = f.input :email_from
             = f.input :return_url
+            = f.input :document_similarity_threshold, as: :string
 
           .form-actions
             = f.button :submit, class: 'btn btn-success', value: t('.save')
