--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,3 +61,10 @@ code {
   left: 0px;
   font-size: 22px;
 }
+
+.chevron:after {
+    content: "\f078";
+}
+.collapsed .chevron:after {
+    content: "\f054";
+}
