--- a/app/views/layouts/user.slim
+++ b/app/views/layouts/user.slim
@@ -3,11 +3,7 @@ html
   head
     = render 'shared/head'
   body
-    nav.navbar.navbar-expand-lg.navbar-light.bg-light.flex-column.flex-md-row.sticky-top[style="background-color: #e3f2fd;"]
-      = content_tag :div, class: 'container-fluid' do
-        = render 'shared/brand'
-    .container-fluid
-      br
+    = render 'navbar'
+    .container
       = yield
-    / = render 'shared/footer'
     = noty_flashes
