--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -32,8 +32,13 @@
 
       .row
         .col-12.col-sm-6
-          = f.input :citizenship_country_id,  as: :select,  collection: Country.options_for_select,
-                  priority: Rails.configuration.application.country_priority
+
+          = f.input :citizenship_country_id,
+                  as: :select,
+                  collection: Country.options_for_select,
+                  priority: Rails.configuration.application.country_priority,
+                  selected: f.object.citizenship_country_id || f.object.geoip_country_iso_code
+
         .col-12.col-sm-6
           = f.input :document_number
       .row
