--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -36,7 +36,7 @@
           = f.input :citizenship_country_iso_code,
                   as: :select,
                   collection: Country.options_for_select,
-                  selected: f.object.citizenship_country_iso_code || f.object.geoip_country_iso_code
+                  selected: f.object.citizenship_country_iso_code || geoip_country_iso_code(f.object.remote_ip)
 
         .col-12.col-sm-6
           = f.input :document_number
