--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -3,7 +3,6 @@
   div.pull-right
     span.badge.badge-light RU
   h4 = verification.applicant.external_id
-hr
 .container
   = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
     h3 Личные данные
@@ -13,7 +12,10 @@ hr
         = f.input :last_name
         = f.input :patronymic
       .col-md-5
-        = f.input :country
+        = f.input :citizenship_country_iso_code,
+                as: :select,
+                collection: Country.options_for_select,
+                selected: f.object.citizenship_country_iso_code || geoip_country_iso_code(f.object.remote_ip)
         = f.input :birth_date, as: :date_picker
         = f.input :email, as: :email
       .col-md-2
