--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -14,8 +14,8 @@
       .col-md-5
         = f.input :citizenship_country_iso_code,
                 as: :select,
-                collection: Country.options_for_select,
-                selected: f.object.citizenship_country_iso_code || geoip_country_iso_code(f.object.remote_ip)
+                collection: country_options_for_select,
+                selected: f.object.citizenship_country_iso_code || applicant_geoip_country_iso_code
         = f.input :birth_date, as: :date_picker
         = f.input :email, as: :email
       .col-md-2
@@ -68,10 +68,10 @@ hr
       .row
         .col-12.col-sm-6
 
-          = f.input :citizenship_country_iso_code,
-                  as: :select,
-                  collection: Country.options_for_select,
-                  selected: f.object.citizenship_country_iso_code || geoip_country_iso_code(f.object.remote_ip)
+          / = f.input :citizenship_country_iso_code,
+          /         as: :select,
+          /         collection: Country.options_for_select,
+          /         selected: f.object.citizenship_country_iso_code || geoip_country_iso_code(f.object.remote_ip)
 
         .col-12.col-sm-6
           = f.input :document_number
