--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -32,8 +32,11 @@
 
       .row
         .col-12.col-sm-6
-          = f.input :country, as: :country,
-                  priority: Rails.configuration.application.country_priority
+
+          = f.input :citizenship_country_iso_code,
+                    as: :select,
+                    collection: country_options_for_select
+
         .col-12.col-sm-6
           = f.input :document_number
       .row
